<resources>
    <string name="app_name">ProyectoCalendario</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña no es correcta</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_login">Login</string>
    <string name="loginHintEmail">Enter your email...</string>
    <string name="loginHintPassword">Enter your password...</string>
    <string name="loginForgot">Forgot your password?</string>
    <string name="loginButton">Login</string>
    <string name="loginOr">or...</string>
    <string name="loginMSG">Use any of your accounts to log-in in this app, we will create the account for you. If you wish, you can use your Google account. \nYour private data will not be stored.</string>
    <string name="mensaje_cuando_la_cagas">Inserta un Email válido</string>

    <string name="buttonSchedule">Crear calendario</string>
    <string name="buttonMineSchedule">Mis calendarios</string>
    <string name="buttonSearchSchedule">Buscar calendario</string>

    <!-- CALENDARIO -->
    <string name="material_calendar_monday">L</string>
    <string name="material_calendar_tuesday">M</string>
    <string name="material_calendar_wednesday">M</string>
    <string name="material_calendar_thursday">J</string>
    <string name="material_calendar_friday">V</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">D</string>

    <array name="material_calendar_months_array">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </array>

    <string name="material_calendar_today_button">Hoy</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Cancelar</string>

    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>

</resources>
