<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/idCreateSchelude"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/buttonSchedule"
        android:textColor="@color/colorSecundary"
        android:textSize="24sp" />

    <Button
        android:id="@+id/idMineSchelude"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/idCreateSchelude"
        android:layout_marginTop="10dp"
        android:text="@string/buttonMineSchedule"
        android:textColor="@color/colorSecundary"
        android:textSize="24sp" />

    <Button
        android:id="@+id/idSearchSchelude"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_below="@id/idMineSchelude"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorSecundary"
        android:text="@string/buttonSearchSchedule"
        android:textColor="@color/colorSecundary"
        android:textSize="24sp" />

</RelativeLayout>